# raspberry-pg

./: Dockerfile  docker-compose.yml  frames_2025-04-29_15.48.30.gv  frames_2025-05-02_17.51.44.gv
.devcontainer/: Dockerfile  devcontainer.json
install/my_robot/share/my_robot/: package.sh
install/my_robot/share/my_robot/launch/: full_slam_launch.py
install/uart_publisher/share/uart_publisher/: local_setup.sh
install/uart_publisher/share/uart_publisher/cmake/: uart_publisherConfig.cmake
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
ros2_ws/install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: local_setup.sh  package.sh
ros2_ws/install/my_robot/share/my_robot/: package.sh  package.xml
ros2_ws/install/navigation_pkg/share/navigation_pkg/: package.sh
ros2_ws/install/slam_pkg/share/slam_pkg/: local_setup.sh  package.sh  package.xml
ros2_ws/install/uart_publisher/lib/uart_publisher/: uart_publisher
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/uart_publisher/share/uart_publisher/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/my_robot/: package.xml  setup.py
ros2_ws/src/my_robot/config/: slam_config.yaml
ros2_ws/src/my_robot/launch/: full_slam_launch.py
ros2_ws/src/slam_pkg/: CMakeLists.txt
ros2_ws/src/uart_publisher/: CMakeLists.txt
ros2_ws/src/uart_publisher/src/: uart_publisher.cpp
(+10 files in other folders)
