<?xml version="1.0"?>
<package format="3">
  <name>uart_publisher</name>
  <version>0.0.1</version>
  <description>Publikowanie przez UART z /cmd_vel</description>
  <maintainer email="twoj@email.com">Twoje Imię</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
